<resources>
    <string name="app_name">Trade</string>
    <string name="title_home">Home</string>
    <string name="title_quotation">Quotation</string>
    <string name="title_trade">Trade</string>
    <string name="title_account">Account</string>
    <string name="title_login">Login</string>

    <string name="text_my_assets">My Assets</string>
    <string name="text_new_to_us">New to us?</string>
    <string name="text_my_assets_note">View and manage your assets after login</string>
    <string name="text_your_email_address">Your Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_firstname">First Name</string>
    <string name="text_lastname">Last Name</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_phone_number">Phone Number</string>
	<string name="text_sms">SMS</string>
    <string name="text_password_confirm">Password Confirm</string>
    <string name="text_reference_number">Reference Number</string>
    <string name="text_my_balance">My Balance</string>
    <string name="text_my_order">My Order</string>
    <string name="text_about">About</string>
    <string name="text_price">Price</string>
    <string name="text_amount">Amount</string>
    <string name="text_buy">Buy</string>
    <string name="text_sell">Sell</string>
    <string name="text_hello_username">Hello, %s</string>
    <string name="text_sms_sent">sms sent success</string>
    <string name="text_sms_sent_error">xxxxx</string>
    <string name="text_logout">Logout</string>
    <string name="text_agree_private_policy">I agree with private policy</string>
    <string name="text_login_hint">login to explore bisail</string>
    <string name="text_welcome">welcome bisail</string>

    <string name="button_usdt">USDT</string>
    <string name="button_btc">BTC</string>
    <string name="button_eth">ETH</string>
    <string name="button_submit">submit</string>
    <string name="button_login">Log in</string>
    <string name="button_logout">Logout</string>
    <string name="button_register">Register</string>
    <string name="button_sms_send">Send SMS</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>
    <string name="button_limit_order">Limit Order</string>

    <string name="error_agree">policy not agreed</string>
    <string name="error_sms">sms is incorrect</string>
    <string name="error_email">email format is not correct</string>
    <string name="error_first_name">firstname is empty</string>
    <string name="error_last_name">lastname is empty</string>
    <string name="error_password">passsword format is not correct</string>
    <string name="error_password_confirm">password are not the same</string>
    <string name="error_phone">phone format is not correct</string>
    <string name="error_referrals">referrals error</string>

</resources>